--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         if(closeMenuBtn) closeMenuBtn.addEventListener('click', toggleMenu);
 
         // Gemini API Logic
-        const apiKey = "AIzaSyAl8ihQjDOdsh3wayUUKBq-FwfFVdE9Ld0"; // Set by environment, left empty for now
+        const apiKey = "GEMINI API"; // Set by environment, left empty for now
 
         async function callGeminiAPI(type) {
             let prompt = "";
@@ -386,4 +386,5 @@
         }
     </script>
 </body>
+
 </html>
